--- a/flexbox.css
+++ b/flexbox.css
@@ -1,3 +1,6 @@
 .container {
-  width: 200px;
+  height: 300px;
+  background-color: rgb(71, 88, 88);
+  display: flex;
+  flex-direction: column;
 }
