added sticky as position

--- a/flexbox.css
+++ b/flexbox.css
@@ -1,21 +1,47 @@
 .container {
   height: 300px;
-  width: 300;
+  width: 300px;
   background-color: rgb(71, 88, 88);
   display: flex;
   flex-direction: column;
 }
 
 #heady {
-  height: 250px;
+  height: 300px;
   background-color: bisque;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  justify-content: space-between;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.kid {
+  background-color: rgb(234, 238, 242);
+  height: 45px;
+  width: 45px;
 }
 
 #paris {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: antiquewhite;
+}
+
+.end {
+  height: 250px;
+  width: 250;
+  background-color: beige;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+#shushu {
+  background-color: bisque;
+}
+
+div.stick {
+  position: sticky;
+  top: 20px;
+  background-color: beige;
 }
