--- a/flexbox.css
+++ b/flexbox.css
@@ -4,16 +4,19 @@
   background-color: rgb(71, 88, 88);
   display: flex;
   flex-direction: column;
+  justify-content: left;
+  align-items: stretch;
 }
 
 #heady {
   height: 300px;
-  background-color: bisque;
+  background-color: rgb(7, 131, 63);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  align-items: end;
 }
 
 .kid {
@@ -25,6 +28,9 @@
 #paris {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: antiquewhite;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .end {
@@ -34,6 +40,7 @@
   display: flex;
   flex-direction: row;
   justify-content: end;
+  align-items: end;
 }
 
 #shushu {
@@ -43,5 +50,9 @@
 div.stick {
   position: sticky;
   top: 20px;
+  background-color: beige;
+}
+
+#mid {
   background-color: beige;
 }
